[package]
edition = "2021"
name = "splitwise"
version = "0.1.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hyper = { version = "0.14", features = ["full"] }
anyhow = "1.0.58"
pretty_assertions = "1.2.1"
proc-macro2 = "1.0.40"
quickcheck = "1"
quickcheck_macros = "1"
quote = "1.0.20"
reqwest = {version = "0.11.11", features = ["blocking", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlite = "0.26.0"
syn = {version = "1.0.98", features = ["full", "visit-mut", "extra-traits"]}
tokio = {version = "1", features = ["full"]}
