[package]
edition = "2021"
name = "own"
version = "0.1.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = {version = "1.0.98", features = ["full", "visit-mut", "extra-traits"]}
