[package]
edition = "2021"
name = "splitwise"
version = "0.1.0"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.57"
aws-config = "0.46.0"
aws-sdk-dynamodb = "0.16.0"
aws-types = "0.46.0"
fake = {version = "2.5", features = ['derive']}
futures = "0.3.23"
own = {path = "../own"}
pretty_assertions = "1.2.1"
proc-macro2 = "1.0.40"
quickcheck = "1"
quickcheck_macros = "1"
quote = "1.0.20"
rand = "0.8"
reqwest = {version = "0.11.11", features = ["json"]}
rusqlite = {version = "0.28.0", features = ["bundled"]}
serde = {version = "1.0", features = ["derive"]}
serde_dynamo = {version = "4.0.4", features = ["aws-sdk-dynamodb+0_16"]}
serde_json = "1.0"
syn = {version = "1.0.98", features = ["full", "visit-mut", "extra-traits"]}
tokio = {version = "1", features = ["full"]}
